--- a/syntaxes/vfx.tmLanguage.jsonc
+++ b/syntaxes/vfx.tmLanguage.jsonc
@@ -4,7 +4,7 @@
 		"If you want to provide a fix or improvement, please create a pull request against the original repository.",
 		"Once accepted there, we are happy to receive an update request."
 	],
-	"version": "https://github.com/tgjones/shaders-tmLanguage/commit/87c0dca3a39170dbd7ee7e277db4f915fb2de14a",
+	"$schema": "https://raw.githubusercontent.com/martinring/tmlanguage/master/tmlanguage.json",
 	"name": "VFX",
 	"scopeName": "source.vfx",
 	"patterns": [
