--- a/Rider/vfx-riderplugin/src/main/resources/META-INF/plugin.xml
+++ b/Rider/vfx-riderplugin/src/main/resources/META-INF/plugin.xml
@@ -15,6 +15,7 @@
     ]]>
     </description>
 
+<!--    <idea-version since-build="222.4167.23"/>-->
     <idea-version since-build="211.7628.21"/>
 
     <!-- please see https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html#modules-available-in-all-products
@@ -22,6 +23,7 @@
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.modules.lang</depends>
     <depends>com.intellij.modules.vcs</depends>
+<!--    <depends>org.jetbrains.plugins.textmate</depends>-->
 
 
     <extensions defaultExtensionNs="com.intellij">
